--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,40 +1,47 @@
 body {
-  font-family: "AVENGEANCE HEROIC AVENGER AT";
   color: white;
   background: url("../images/marvel-studios-4096x2304-hd-4k-4734.png");
+  background-size: auto;
+  background-repeat: no-repeat;
 }
 
 .container {
   margin: 10px auto;
   background-color: gray;
-  border: 2px solid darkred;
-  height: 1500px;
-  width: 60%;
+  border: 10px solid darkred;
+  height: auto;
   text-align: center;
-  opacity: 70%;
 }
 
 img {
-  padding-right: 50px;
+  padding-right: 70px;
 }
 
-timeDiv {
-  width: 100px;
-  height: 100px;
+.timeDiv {
+  font-family: "AVENGEANCE HEROIC AVENGER";
+  font-size: 200%;
+  width: 500px;
+  height: 150px;
   text-align: center;
-  background: white;
-  border: 5px;
+  background-color: white;
+  color: black;
+  border: 10px;
   border-color:blue;
+  padding-top: 40px;
   margin-top: 40px;
   margin-bottom: 40px;
-  margin-left: 200px;
+  margin-left: 275px;
 }
 
 .questionDiv {
+  font-family: "AVENGEANCE HEROIC AVENGER";
   width: 60%;
-  height: 500px;
+  height: 200px;
   text-align: center;
+  padding-top: 50px;
+  line-height: 75px;
   background: black;
+  color: white;
   border: 5px;
   border-color:white;
   margin-top: 40px;
@@ -42,30 +49,29 @@ timeDiv {
   margin-left: 200px;
 }
 
-.answerDiv {
-  width: 60%;
-  height: 225px;
-  text-align: center;
-  background: black;
-  border: 5px;
-  border-color: white;
-  margin-top: 40px;
-  margin-bottom: 40px;
-  margin-left: 200px;
+p {
+  background-color: black;
+  padding: 15px;
+  width: 40%;
+  color: white;
+  font-family: "AVENGEANCE HEROIC AVENGER";
+  margin-left: 325px;
+  font-size: 35px;
 }
 
 #reset {
-  position: relative;
+  position: center;
   bottom: -150px;
 }
 
 .answerchoice {
-	border: 1px solid white;
+  font-family: "AVENGEANCE HEROIC AVENGER";
+	border: 5px white;
   border-radius: 5%;
-	width: 40%;
-	color: black;
+	width: 50%;
+	color: white;
   text-align: center;
   margin: 10px auto;
-  font-size: 20px;
+  font-size: 35px;
   background-color: black;
 }
